--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,3 +8,15 @@ layout: default
         
 {% if site.disqus-id %} {% include comments.html %} {% endif %}
 
+<style>
+table {
+    border: 1px solid #000000;
+    border-collapse: collapse;
+    word-wrap:break-word; word-break:break-all;
+}
+th,td {
+    padding: 20px;
+    border: 1px solid #000000;
+    text-align:center;
+}
+</style>
