--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,3 +3,6 @@
 </header>
 <a href='{{ site.url }}/'> Home</a> | <a href='{{ site.url }}/about/'>About </a> | <a href='{{ site.url }}/contact/'> Contacts</a> | <a href='{{ site.url }}/archive/'> Archive</a> 
 <hr>
+<style>
+    li{line-height: 30px;}
+</style>
