--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,14 +9,17 @@ layout: default
 {% if site.disqus-id %} {% include comments.html %} {% endif %}
 
 <style>
-table {
-    border: 1px solid #000000;
-    border-collapse: collapse;
-    word-wrap:break-word; word-break:break-all;
-}
-th,td {
-    padding: 10px;
-    border: 1px solid #000000;
-    text-align:center;
-}
+        table {
+                border: 1px solid #000000;
+                border-collapse: collapse;
+                word-wrap:break-word; word-break:break-all;
+        }
+        th,td {
+                padding: 10px;
+                border: 1px solid #000000;
+                text-align:center;
+        }
+        blockquote{
+                margin-left: 0;
+        }
 </style>
